--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
             <li class="navbar__menu__item">Contact</li>
         </ul>
     </nav>
+
+    <!-- Home -->
+    <section id="home">
+        <div class="home__container">
+            <img src="imgs/profile.png" alt="" class="home__profile">
+            <h1>HYEJI NAMGUNG</h1>
+            <h2>Front-end Developer</h2>
+        </div>
+    </section>
 </body>
 </html>
