--- a/index.html
+++ b/index.html
@@ -35,5 +35,56 @@
             <h2>Front-end Developer</h2>
         </div>
     </section>
+
+    <!-- About -->
+    <section id="about">
+        <div class="container">
+            <div class="title">
+                <h2>About Me</h2>
+            </div>
+            <div class="content">
+                <div class="content__item">
+                    <p>안녕하세요. 주니어 프론트엔드 개발자 남궁혜지입니다.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, officiis? Beatae rem earum quisquam odio accusantium non in, harum commodi. Voluptas ab similique esse totam voluptatem, porro incidunt beatae error?</p>
+                </div>
+                <div class="content__item">
+                    <h3>인천재능대학교</h3>
+                    <p>컴퓨터정보과 2018 졸업</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="title">
+                <h2>Skills</h2>
+            </div>
+            <div class="content">
+                <div class="skill">
+                    <div class="skill__title">
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width: 90%;"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__title">
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width: 80%;"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill__title">
+                        <h3>Java Script</h3>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value" style="width: 70%;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
