--- a/index.html
+++ b/index.html
@@ -86,5 +86,62 @@
             </div>
         </div>
     </section>
+    
+    <!-- Portfolio -->
+    <section id="portfolio">
+        <div class="portfolio__container">
+            <h2>Portfolio</h2>
+            <div class="portfolio__categories">
+                <button class="category__btn selected" data-filter="*">All</button>
+                <button class="category__btn" data-filter="Web">Web</button>
+                <button class="category__btn" data-filter="JS">JS</button>
+            </div>
+
+            <div class="portfolio__project">
+                <a 
+                href="https://github.com/heyji-ten" 
+                class="project"
+                target="blank"
+                data-type="Web"
+                >
+                    <img src="imgs/favicon.png" alt="des" class="project__img">
+                    <div class="project__description">
+                        <h3>Web</h3>
+                        <span>Clone coding with HTML and CSS</span>
+                        <button class="project__btn">view</button>
+                        <button class="project__btn">git</button>
+                    </div>
+                </a>
+                <a 
+                href="https://github.com/heyji-ten" 
+                class="project"
+                target="blank"
+                data-type="Web"
+                >
+                    <img src="imgs/favicon.png" alt="des" class="project__img">
+                    <div class="project__description">
+                        <h3>Web</h3>
+                        <span>Clone coding with HTML and CSS</span>
+                        <button class="project__btn">view</button>
+                        <button class="project__btn">git</button>
+                    </div>
+                </a>
+                <a 
+                href="https://github.com/heyji-ten" 
+                class="project"
+                target="blank"
+                data-type="JS"
+                >
+                    <img src="imgs/favicon.png" alt="des" class="project__img">
+                    <div class="project__description">
+                        <h3>JS</h3>
+                        <span>Clone coding with HTML and CSS</span>
+                        <button class="project__btn">view</button>
+                        <button class="project__btn">git</button>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
