--- a/index.html
+++ b/index.html
@@ -143,5 +143,58 @@
             </div>
         </div>
     </section>
+
+    <!-- FAQ -->
+    <section id="faq">
+        <div class="container">
+            <div class="title">
+                <h2>FAQ</h2>
+            </div>
+            <div class="content">
+                <ul class="faq__list">
+                    <li>
+                        <div class="faq__list__item">
+                            <h3>질문</h3>
+                            <div class="answer">
+                                답변
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="faq__list__item">
+                            <h3>질문</h3>
+                            <div class="answer">
+                                답변
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="faq__list__item">
+                            <h3>질문</h3>
+                            <div class="answer">
+                                답변
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="faq__list__item">
+                            <h3>질문</h3>
+                            <div class="answer">
+                                답변
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="faq__list__item">
+                            <h3>질문</h3>
+                            <div class="answer">
+                                답변
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
