--- a/index.html
+++ b/index.html
@@ -196,5 +196,28 @@
             </div>
         </div>
     </section>
+
+    <!-- Contact -->
+    <section id="contact">
+        <div class="container">
+            <div class="title">
+                <h2>Contact</h2>
+            </div>
+            <div class="content">
+                <div class="content__item">
+                    <h3>Email</h3>
+                    <p>ngni4856@gmail.com</p>
+                </div>
+                <div class="content__item">
+                    <h3>Phone</h3>
+                    <p>010-2492-0798</p>
+                </div>
+                <div class="content__item">
+                    <h3>Residence</h3>
+                    <p>Incheon</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
