--- a/index.html
+++ b/index.html
@@ -216,6 +216,14 @@
                     <h3>Residence</h3>
                     <p>Incheon</p>
                 </div>
+                <div class="content__item">
+                    <a href="https://github.com/heyji-ten" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
