--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <!-- Navbar -->
     <nav id="navbar">
-        <div class="navbar__logo"></div>
+        <div class="navbar__logo">
+            <i class="fas fa-air-freshener"></i>
+        </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item">Home</li>
             <li class="navbar__menu__item">About</li>
@@ -227,5 +229,12 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <p class="copyrights">
+            ⓒ Hyeji Namgung 2021
+        </p>
+    </footer>
 </body>
 </html>
