--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hyeji Portfolio</title>
 
+    <link rel="icon" type="image/png" href="imgs/favicon.png">
+
     <script src="https://kit.fontawesome.com/925a1daff6.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,7 +20,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <i class="fas fa-air-freshener"></i>
+            <img src="imgs/logo.png" alt="" class="logo">
         </div>
         <ul class="navbar__menu">
             <li class="navbar__menu__item">Home</li>
