--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <section id="home">
         <div class="home__container">
             <img src="imgs/profile.png" alt="" class="home__profile">
-            <h1>HYEJI NAMGUNG</h1>
-            <h2>Front-end Developer</h2>
+            <h1 class="home__tilte">HYEJI NAMGUNG</h1>
+            <h2 class="home__description">Front-end Developer</h2>
         </div>
     </section>
 
