--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section section__container">
         <div class="container">
             <div class="title">
                 <h2>About Me</h2>
@@ -92,7 +92,7 @@
     </section>
     
     <!-- Portfolio -->
-    <section id="portfolio">
+    <section id="portfolio" class="section section__container">
         <div class="portfolio__container">
             <h2>Portfolio</h2>
             <div class="portfolio__categories">
@@ -149,7 +149,7 @@
     </section>
 
     <!-- FAQ -->
-    <section id="faq">
+    <section id="faq" class="section section__container">
         <div class="container">
             <div class="title">
                 <h2>FAQ</h2>
@@ -202,7 +202,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section section__container">
         <div class="container">
             <div class="title">
                 <h2>Contact</h2>
@@ -233,7 +233,7 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="section section__container">
         <p class="copyrights">
             ⓒ Hyeji Namgung 2021
         </p>
