--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     </section>
     
     <!-- Portfolio -->
-    <section id="portfolio" class="section section__container">
-        <div class="portfolio__container">
+    <section id="portfolio">
+        <div class="portfolio__container section section__container">
             <h2>Portfolio</h2>
             <div class="portfolio__categories">
                 <button class="category__btn selected" data-filter="*">All</button>
@@ -102,48 +102,48 @@
             </div>
 
             <div class="portfolio__project">
-                <a 
-                href="https://github.com/heyji-ten" 
+                <div 
                 class="project"
-                target="blank"
                 data-type="Web"
                 >
                     <img src="imgs/favicon.png" alt="des" class="project__img">
                     <div class="project__description">
                         <h3>Web</h3>
                         <span>Clone coding with HTML and CSS</span>
-                        <button class="project__btn">view</button>
-                        <button class="project__btn">git</button>
+                        <div class="btn">
+                            <a href="#" class="project__btn" >view</a>
+                            <a href="#"  class="project__btn">git</a>
+                        </div>
                     </div>
-                </a>
-                <a 
-                href="https://github.com/heyji-ten" 
+                </div>
+                <div
                 class="project"
-                target="blank"
                 data-type="Web"
                 >
                     <img src="imgs/favicon.png" alt="des" class="project__img">
                     <div class="project__description">
                         <h3>Web</h3>
                         <span>Clone coding with HTML and CSS</span>
-                        <button class="project__btn">view</button>
-                        <button class="project__btn">git</button>
+                        <div class="btn">
+                            <a href="#" class="project__btn" >view</a>
+                            <a href="#"  class="project__btn">git</a>
+                        </div>
                     </div>
-                </a>
-                <a 
-                href="https://github.com/heyji-ten" 
+                </div>
+                <div
                 class="project"
-                target="blank"
                 data-type="JS"
                 >
                     <img src="imgs/favicon.png" alt="des" class="project__img">
                     <div class="project__description">
                         <h3>JS</h3>
                         <span>Clone coding with HTML and CSS</span>
-                        <button class="project__btn">view</button>
-                        <button class="project__btn">git</button>
+                        <div class="btn">
+                            <a href="#" class="project__btn" >view</a>
+                            <a href="#"  class="project__btn">git</a>
+                        </div>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </section>
