--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
                         <h3>Web</h3>
                         <span>Clone coding with HTML and CSS</span>
                         <div class="btn">
-                            <a href="#" class="project__btn" >view</a>
-                            <a href="#"  class="project__btn">git</a>
+                            <a href="#"
+                            target="blank" 
+                            class="project__btn" >view</a>
+                            <a href="#"
+                            target="blank" 
+                            class="project__btn">git</a>
                         </div>
                     </div>
                 </div>
@@ -125,8 +129,12 @@
                         <h3>Web</h3>
                         <span>Clone coding with HTML and CSS</span>
                         <div class="btn">
-                            <a href="#" class="project__btn" >view</a>
-                            <a href="#"  class="project__btn">git</a>
+                            <a href="#"
+                            target="blank"
+                            class="project__btn" >view</a>
+                            <a href="#"
+                            target="blank"
+                            class="project__btn">git</a>
                         </div>
                     </div>
                 </div>
@@ -139,8 +147,12 @@
                         <h3>JS</h3>
                         <span>Clone coding with HTML and CSS</span>
                         <div class="btn">
-                            <a href="#" class="project__btn" >view</a>
-                            <a href="#"  class="project__btn">git</a>
+                            <a href="#"
+                            target="blank"
+                            class="project__btn" >view</a>
+                            <a href="#"
+                            target="blank"
+                            class="project__btn">git</a>
                         </div>
                     </div>
                 </div>
@@ -158,7 +170,15 @@
                 <ul class="faq__list">
                     <li>
                         <div class="faq__list__item">
-                            <h3>질문</h3>
+                            <h3 class="question">질문</h3>
+                            <div class="answer">
+                                답변 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, consequuntur dolorem! Excepturi quisquam, in recusandae quos asperiores pariatur, ipsum provident adipisci earum facilis suscipit? Vitae at laboriosam error culpa assumenda.
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="faq__list__item">
+                            <h3 class="question">질문</h3>
                             <div class="answer">
                                 답변
                             </div>
@@ -166,7 +186,7 @@
                     </li>
                     <li>
                         <div class="faq__list__item">
-                            <h3>질문</h3>
+                            <h3 class="question">질문</h3>
                             <div class="answer">
                                 답변
                             </div>
@@ -174,7 +194,7 @@
                     </li>
                     <li>
                         <div class="faq__list__item">
-                            <h3>질문</h3>
+                            <h3 class="question">질문</h3>
                             <div class="answer">
                                 답변
                             </div>
@@ -182,15 +202,7 @@
                     </li>
                     <li>
                         <div class="faq__list__item">
-                            <h3>질문</h3>
-                            <div class="answer">
-                                답변
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="faq__list__item">
-                            <h3>질문</h3>
+                            <h3 class="question">질문</h3>
                             <div class="answer">
                                 답변
                             </div>
