--- a/index.html
+++ b/index.html
@@ -214,31 +214,30 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" class="section section__container">
-        <div class="container">
-            <div class="title">
-                <h2>Contact</h2>
-            </div>
-            <div class="content">
-                <div class="content__item">
-                    <h3>Email</h3>
-                    <p>ngni4856@gmail.com</p>
+    <section id="contact">
+        <div class="section section__container">
+            <div class="container">
+                <div class="title">
+                    <h2>Contact</h2>
                 </div>
-                <div class="content__item">
-                    <h3>Phone</h3>
-                    <p>010-2492-0798</p>
-                </div>
-                <div class="content__item">
-                    <h3>Residence</h3>
-                    <p>Incheon</p>
-                </div>
-                <div class="content__item">
-                    <a href="https://github.com/heyji-ten" target="_blank">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    <a href="#" target="_blank">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
+                <div class="content">
+                    <div class="content__item">
+                        <h3>Email : ngni4856@gmail.com</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3>Phone : 010-2492-0798</h3>
+                    </div>
+                    <div class="content__item">
+                        <h3>Residence : Incheon</h3>
+                    </div>
+                    <div class="content__item">
+                        <a href="https://github.com/heyji-ten" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="#" target="_blank">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
