--- a/index.html
+++ b/index.html
@@ -244,10 +244,12 @@
     </section>
 
     <!-- Footer -->
-    <footer class="section section__container">
-        <p class="copyrights">
-            ⓒ Hyeji Namgung 2021
-        </p>
+    <footer>
+        <div class="section section__container">
+            <p class="copyrights">
+                ⓒ Hyeji Namgung 2021
+            </p>
+        </div>
     </footer>
 </body>
 </html>
