--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         </ul>
     </nav>
 
+    <!-- Toggle button -->
+    <button class="navbar__toggle-btn">
+        <i class="fas fa-bars"></i>
+    </button>
+
     <!-- Home -->
     <section id="home">
         <div class="home__container">
