--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <img src="imgs/logo.png" alt="" class="logo">
         </div>
         <ul class="navbar__menu">
-            <li class="navbar__menu__item">Home</li>
-            <li class="navbar__menu__item">About</li>
-            <li class="navbar__menu__item">Portfolio</li>
-            <li class="navbar__menu__item">FAQ</li>
-            <li class="navbar__menu__item">Contact</li>
+            <li class="navbar__menu__item active" data-link="#home">Home</li>
+            <li class="navbar__menu__item" data-link="#about">About</li>
+            <li class="navbar__menu__item" data-link="#portfolio">Portfolio</li>
+            <li class="navbar__menu__item" data-link="#faq">FAQ</li>
+            <li class="navbar__menu__item" data-link="#contact">Contact</li>
         </ul>
 
         <!-- Toggle button -->
