--- a/index.html
+++ b/index.html
@@ -256,5 +256,10 @@
             </p>
         </div>
     </footer>
+
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 </html>
