JS:Portfolio anime

--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
                 class="project"
                 data-type="JS"
                 >
-                    <img src="imgs/favicon.png" alt="des" class="project__img">
+                    <img src="https://user-images.githubusercontent.com/59608643/121850902-6c0b5500-cd28-11eb-888f-de39955cbe2b.jpg" alt="des" class="project__img">
                     <div class="project__description">
                         <h3>JS</h3>
-                        <span>Clone coding with HTML and CSS</span>
+                        <span>ShoppingList</span>
                         <div class="btn">
-                            <a href="#"
+                            <a href="https://heyji-ten.github.io/ShoppingList/"
                             target="blank"
                             class="project__btn" >view</a>
-                            <a href="#"
+                            <a href="https://github.com/heyji-ten/ShoppingList"
                             target="blank"
                             class="project__btn">git</a>
                         </div>
