--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             </div>
             <div class="content">
                 <div class="content__item">
-                    <p>안녕하세요. 주니어 프론트엔드 개발자 남궁혜지입니다.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, officiis? Beatae rem earum quisquam odio accusantium non in, harum commodi. Voluptas ab similique esse totam voluptatem, porro incidunt beatae error?</p>
+                    <p>안녕하세요. 신입 프론트엔드 개발자 남궁혜지입니다.</p>
                 </div>
                 <div class="content__item">
                     <h3>인천재능대학교</h3>
@@ -111,15 +110,15 @@
                 class="project"
                 data-type="Web"
                 >
-                    <img src="imgs/favicon.png" alt="des" class="project__img">
+                    <img src="imgs/portfolio Preview.jpg" alt="des" class="project__img">
                     <div class="project__description">
                         <h3>Web</h3>
-                        <span>Clone coding with HTML and CSS</span>
+                        <span>Portfolio Page</span>
                         <div class="btn">
-                            <a href="#"
+                            <a href="https://heyji-ten.github.io/portfolio-hyeji/"
                             target="blank" 
                             class="project__btn" >view</a>
-                            <a href="#"
+                            <a href="https://github.com/heyji-ten/portfolio-hyeji"
                             target="blank" 
                             class="project__btn">git</a>
                         </div>
@@ -175,9 +174,10 @@
                 <ul class="faq__list">
                     <li>
                         <div class="faq__list__item">
-                            <h3 class="question">질문</h3>
+                            <h3 class="question">왜 프론트엔드 개발자가 되고싶은가</h3>
                             <div class="answer">
-                                답변 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, consequuntur dolorem! Excepturi quisquam, in recusandae quos asperiores pariatur, ipsum provident adipisci earum facilis suscipit? Vitae at laboriosam error culpa assumenda.
+                                프론트엔드를 자세히 알게 된 것은 대학 전공과목으로 처음 접하게 되었습니다.
+                                프론트엔드를 배우며 흥미를 가지게 되었고, 재미를 느끼게 되어 좀 더 알아가고 싶고 나를 발전시켜줄 수 있는 분야라고 생각되어 프론트엔드 개발자로 진로를 정하게 되었습니다.
                             </div>
                         </div>
                     </li>
