--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
                 </div>
                 <div
                 class="project"
-                data-type="Web"
+                data-type="JS"
                 >
-                    <img src="imgs/favicon.png" alt="des" class="project__img">
+                    <img src="imgs/paint Preview.jpg" alt="des" class="project__img">
                     <div class="project__description">
-                        <h3>Web</h3>
-                        <span>Clone coding with HTML and CSS</span>
+                        <h3>JS</h3>
+                        <span>Paint</span>
                         <div class="btn">
-                            <a href="#"
+                            <a href="https://heyji-ten.github.io/paintjs/"
                             target="blank"
                             class="project__btn" >view</a>
-                            <a href="#"
+                            <a href="https://github.com/heyji-ten/paintjs.git"
                             target="blank"
                             class="project__btn">git</a>
                         </div>
@@ -155,6 +155,24 @@
                             target="blank"
                             class="project__btn" >view</a>
                             <a href="https://github.com/heyji-ten/ShoppingList"
+                            target="blank"
+                            class="project__btn">git</a>
+                        </div>
+                    </div>
+                </div>
+                <div
+                class="project"
+                data-type="JS"
+                >
+                    <img src="imgs/carrotGame Preview.jpg" alt="des" class="project__img">
+                    <div class="project__description">
+                        <h3>JS</h3>
+                        <span>Carrot Click Game</span>
+                        <div class="btn">
+                            <a href="https://heyji-ten.github.io/ClickGame/"
+                            target="blank"
+                            class="project__btn" >view</a>
+                            <a href="https://github.com/heyji-ten/ClickGame.git"
                             target="blank"
                             class="project__btn">git</a>
                         </div>
