--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
     </section>
 
-    <!-- FAQ -->
+    FAQ
     <section id="faq" class="section section__container">
         <div class="container">
             <div class="title">
@@ -192,7 +192,7 @@
                 <ul class="faq__list">
                     <li>
                         <div class="faq__list__item">
-                            <h3 class="question">왜 프론트엔드 개발자가 되고싶은가</h3>
+                            <h3 class="question">왜 프론트엔드 개발자가 되고싶은가?</h3>
                             <div class="answer">
                                 프론트엔드를 자세히 알게 된 것은 대학 전공과목으로 처음 접하게 되었습니다.
                                 프론트엔드를 배우며 흥미를 가지게 되었고, 재미를 느끼게 되어 좀 더 알아가고 싶고 나를 발전시켜줄 수 있는 분야라고 생각되어 프론트엔드 개발자로 진로를 정하게 되었습니다.
@@ -201,33 +201,27 @@
                     </li>
                     <li>
                         <div class="faq__list__item">
-                            <h3 class="question">질문</h3>
+                            <h3 class="question">회계일을 했었는데 왜 프론트엔드로 오게 되었는가?</h3>
                             <div class="answer">
-                                답변
+                                개인적인 가족사로 인하여, 회계일을 하게되었습니다. 그러나 저는 회계보다는 전공으로 배웠고 하고싶었던 프론트엔드 업무를 하고 싶어 옮기게 되었습니다.
+                            </div>
+                        </div>
+                    </li>
+                    
+                    <li>
+                        <div class="faq__list__item">
+                            <h3 class="question">막히는 부분이 있다면 어떤식으로 해결할 것인가?</h3>
+                            <div class="answer">
+                                대학교 팀프로젝트에서 막히는 곳이 있었을 때, 직접 검색을 하여 그 부분을 해결하였습니다. 그럼에도 해결하지 못했던 부분은 교수님께 적극적으로 자문을 받아 문제를 해결하는 법을 배웠습니다.
+                                배우는 것에 두려움이 없어 막히는 부분은 검색능력과 적극적으로 질문하여 해결할 것입니다.
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="faq__list__item">
-                            <h3 class="question">질문</h3>
+                            <h3 class="question">당신의 성격은?</h3>
                             <div class="answer">
-                                답변
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="faq__list__item">
-                            <h3 class="question">질문</h3>
-                            <div class="answer">
-                                답변
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="faq__list__item">
-                            <h3 class="question">질문</h3>
-                            <div class="answer">
-                                답변
+                                꼼꼼한 일 처리와 인내심이 강한 것은 제 장점입니다. 어떤 일을 맡더라도 인내심 있게 꼼꼼히 살펴보고 생각해 답을 내리곤 합니다. 그러나 종종 신중한 성격 탓에 결정하는 것에 어려움을 느끼기도 하지만 주변 사람들에게 조언을 구해 주어진 기한 안에 결정을 내리려고 노력합니다. 또한, 힘든 일이 있어도 긍정적으로 생각합니다. 무엇이든 부정적으로 생각하면 스스로가 너무 힘들어진다는 것을 깨달았기 때문에 긍정적으로 생각합니다. 
                             </div>
                         </div>
                     </li>
