--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </div>
     </section>
 
-    FAQ
+    <!-- FAQ -->
     <section id="faq" class="section section__container">
         <div class="container">
             <div class="title">
